<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mainback"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dip"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="30sp" 
            android:paddingTop="12dip"/>

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="100dip" >

            <Button
                android:id="@+id/bn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/login" />
             
        </LinearLayout>

        <LinearLayout android:id="@+id/ll_touxiang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="80dip" >

            <ImageView
                android:id="@+id/iv_touxiang"
                android:layout_width="150dip"
                android:layout_height="150dip"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dip"
            android:orientation="horizontal"
            android:paddingBottom="5dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:paddingTop="15dip" >

            <Button
                android:id="@+id/bn_startrun"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="#ff4900"
                android:text="@string/start"
                android:textColor="#ffffff"
                android:textSize="40sp" 
                android:paddingLeft="50dip"/>

            <ImageButton
                android:id="@+id/bn_setting"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dip"
                android:layout_weight="2"
                android:background="#ff4900"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip" >

            <Button
                android:id="@+id/bn_weather"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/weather"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/bn_distance"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/distance"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/bn_mode"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/mode"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingLeft="2dip"
        android:paddingRight="2dip" >

        <LinearLayout
            android:id="@+id/ll_kaipao"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#88ffffff"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/kaipao"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_yuepaoyou"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#88ffffff"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/yuepaoyou"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_paihang"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#88ffffff"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/paihang"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_wo"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#88ffffff"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/wo"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>