<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainback" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="70dip"
        android:gravity="center"
        android:text="@string/wo"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/ll_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="12dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="#aa000000" >

            <LinearLayout
                android:id="@+id/ll_touxiang"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true" >

                <ImageView
                    android:id="@+id/iv_touxiang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_launcher" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/ll_touxiang"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:text="马化腾 "
                    android:textColor="#fff"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="4dp"
                    android:src="@drawable/ic_launcher" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_name"
                android:layout_toRightOf="@id/ll_touxiang"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="#fff"
                    android:text="LV: " />

                <TextView
                    android:id="@+id/tv_level"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="#fff"
                    android:text="3  跑步新人" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_level"
                android:layout_toRightOf="@id/ll_touxiang" >

                <ProgressBar
                    android:id="@+id/pb_level"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:paddingRight="20dp" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="1dp" 
            android:orientation="horizontal">
            <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#aa000000"
                android:orientation="vertical">
                <TextView android:id="@+id/tv_gongli"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:text="35"/>
                <TextView android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:text="公里"/>
            </LinearLayout>
             <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#aa000000"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:orientation="vertical">
                <TextView android:id="@+id/tv_qianka"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:text="20"/>
                <TextView android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:text="千卡"/>
            </LinearLayout>
             <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#aa000000"
                android:orientation="vertical">
                <TextView android:id="@+id/tv_chengjiu"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:text="5"/>
                <TextView android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:text="成就"/>
            </LinearLayout>
            
        </LinearLayout>
    </LinearLayout>
    
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingLeft="2dip"
        android:paddingRight="2dip" >

        <LinearLayout
            android:id="@+id/ll_kaipao"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#88ffffff"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/kaipao"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_yuepaoyou"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#88ffffff"
            android:orientation="vertical"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/yuepaoyou"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_paihang"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#88ffffff"
            android:orientation="vertical"
            android:layout_marginRight="1dp" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/paihang"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_wo"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#88ffffff"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/wo"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>